# SwitchEase

./: .clang-format  CHANGELOG.md  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  board.h  main.c  main.h  user.h
main/battery_management/: battery_management.c  battery_management.h
main/ble/: ble.c  ble.h
main/ble_server/: ble_server.c  ble_server.h
main/blink/: blink.c  blink.h
main/button/: button.c  button.h
main/servo/: servo.c  servo.h
main/sleep_controller/: sleep_controller.c  sleep_controller.h
main/sntp/: sntp.c  sntp.h  wifi.c  wifi.h
main/wifi/: wifi.c  wifi.h
test/: energy_consumption.py
